# obsidian-jira

./: .gitignore  Cargo.toml  README.md
src/: commons.rs  config.rs  jira.rs  main.rs  obsidian.rs
src/obsidian/: mod.rs  planner.rs  task_file.rs
tui/: Cargo.toml
tui/src/: main.rs
