[package]
name = "tui"
version = "0.1.0"
edition = "2021"
default_run = "tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version="^0.3", features=["parsing", "macros", "local-offset"] }
notify = { version="^6.1.1" }
library = { path = "../library" }

crossterm = { version="0.27.0" }
ratatui = { version="0.26.0" }
